--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,8 @@ dependencies:
   - pip
   - tk
   - pip:
-    - stable-baselines3[extra]
+    - --extra-index-url https://download.pytorch.org/whl/nightly/cpu
+    - torch
     - gymnasium
     - numpy
     - matplotlib
